# wodemao-server

./: .gitignore  Cargo.toml  Dockerfile
.ci/: .env  docker-compose.yml  init-postgres.sql  nginx.conf
src/: main.rs  repo.rs  service.rs
src/repo/: word_repo.rs
src/service/: sentence_service.rs
