[package]
name = "wodemao-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.4"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }