[package]
name = "wodemao-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.4"
jieba-rs = "0.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }