[package]
name = "wodemao-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
axum = "0.6.4"
futures = "0.3.26"
http = "0.2.8"
jieba-rs = "0.6"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = [ "postgres", "runtime-tokio-native-tls", "uuid" ] }
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }